--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.mwb</groupId>
     <artifactId>short-link</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0-release</version>
     <name>short-link</name>
 
     <properties>
